--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# Symlinked .eslintrc.js
-.eslintrc*
-
 # MacOS files
 .DS_Store
 
@@ -16,9 +13,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Editor directories and files
+# Other editor directories and files
 .idea
-.vscode
 *.suo
 *.ntvs*
 *.njsproj
